fix splash screen bottom gap

--- a/src/Home/Styles/index.scss
+++ b/src/Home/Styles/index.scss
@@ -138,10 +138,9 @@ body{
     }
 }
 
-
 #mainSplashDiv{
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-color: black;
     position: absolute;
     top: 0;
